# apf

./: .gitignore  AUTHORS  ChangeLog  Changelog  Makefile  Makefile.am  Makefile.in  NEWS  README  README.md  activefor.h  afclient.c  afserver.c  buflist.c  buflist.h  config  config.h.in  configure  configure.ac  exmodule.c  file.c  file.h  modules.c  modules.h  network.c  network.h  stats.c  stats.h
doc/: afclient.1  afclient.conf.5  afclient_example.conf  afserver.1  afserver.conf.5  afserver_example.conf
doc/en/: README
doc/fr/: fr_README
doc/ru/: ru_README
docs/en/: README
docs/fr/: fr_README
docs/ru/: ru_README
modules/: Makefile  Makefile.am  Makefile.in  exmodule.c
src/: Makefile.am  Makefile.in  activefor.h  afclient.c  afclient.h  afserver.c  afserver.h  ar_options_struct.c  ar_options_struct.h  audit.c  audit.h  audit_list_node_struct.c  audit_list_node_struct.h  audit_list_struct.c  audit_list_struct.h  base64.c  base64.h  buf_list_node_struct.c  buf_list_node_struct.h  buf_list_struct.c  buf_list_struct.h  buflist.c  buflist.h  client_configuration_struct.c  client_configuration_struct.h  client_initialization.c  client_initialization.h  client_realm_struct.c  client_realm_struct.h  client_remoteadmin.c  client_remoteadmin.h  client_reverse_udp.c  client_reverse_udp.h  client_shutdown.c  client_shutdown.h  client_signals.c  client_signals.h  clientnames.c  clientnames.h  connect_client_struct.c  (+90 more)
